@@ -1,9 +1,9 @@
 #ifndef __CONF_H
 #define __CONF_H
 
-extern char Spice_Version[];
-extern char Spice_Notice[];
-extern char Spice_Build_Date[];
+extern char *Spice_Version;
+extern char *Spice_Notice;
+extern char *Spice_Build_Date;
 extern char *Spice_Exec_Dir;
 extern char *Spice_Lib_Dir;
 extern char *Def_Editor;
