@@ -7,10 +7,11 @@ Author: 1985 Wayne A. Christopher, U. C. Berkeley CAD Group
  * Convert a parse tree to a list of data vectors.
  */
 
+#include <ngspice.h>
+
 #include <setjmp.h>
 #include <signal.h>
 
-#include <ngspice.h>
 #include <ftedefs.h>
 #include <dvec.h>
 
